--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-around;
     padding: 2% 6% .6% 0%;
-    background-color: rgb(151, 149, 235);
+    background-color: #9795eb;
     
 }
 
@@ -21,6 +21,7 @@
     border-radius: 10px;
     width: 25%;
     padding-right: 30px;
+    background-color: #9695eb54;
 }
 
 #img{
@@ -34,6 +35,7 @@
     justify-content: center;
     border-radius: 10px;
     width: 60%;
+    background-color: #9695eb54;
 }
 
 
